trying to fix size of letter and alignment with rest of text

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ a.button:hover, a.button:active {
   article {width: 96%;}
 }
 .dropcap {
-  font-size: 4.0em;
+  font-size: 4.5em;
   float: left;
   line-height: .60;
   margin-right: 0.2 em;
